tests/fail/parser-assign5.dit
A {
    String value;
}

A a;

a.value = 'test'

a.value = 'else';